# TEESimulator

app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/org/matrix/TEESimulator/: App.kt
app/src/main/java/org/matrix/TEESimulator/attestation/: AttestationPatcher.kt
app/src/main/java/org/matrix/TEESimulator/interception/keystore/: InterceptorUtils.kt  Keystore2Interceptor.kt
app/src/main/java/org/matrix/TEESimulator/interception/keystore/shim/: KeyMintSecurityLevelInterceptor.kt
app/src/main/java/org/matrix/TEESimulator/pki/: CertificateGenerator.kt
module/: customize.sh  module.prop
